# agentic-ai-practice-code

./: README.md
server/: .env.sample  .gitignore  pyproject.toml
server/1-call-llm/: call_llm.ipynb
server/10-blog-generate-app/: 1_bwa_basic-practice.ipynb  1_bwa_basic.ipynb  2_bwa_improved_prompting.ipynb  3-bwa-notebook-research.ipynb  3-fixed-notebook-research.ipynb  4-google_image_finder_agent.ipynb  Building a Small Language Model in 2026.md  Fine-Tuning in 2026: A Developer's Guide to Local Efficiency and Specialized Performance.md  State of Multimodal LLMs in 2026: Market Leaders, Cost Dynamics, and Integration Strategies.md  demystifying_self-attention_from_theory_to_practical_implementation.md  world_cup_football_2026:_a_global_celebration_of_sport.md
server/2-health-analysis-workflow/: health-analysis.ipynb
server/3-vector-db/: vector-db-besic.ipynb
server/4-rag-chatbot/: rag-book.ipynb
server/5-single-agent/: product-query-agent.ipynb
server/6-multi-model/: multi-model.ipynb
server/7-project-shoping-agent/: reviews_api.py  shopping_agent.py  store.db
server/9-blog-generate-app/: 1_bwa_basic.ipynb  cultivating_environmental_awareness:_a_guide_to_understanding_and_action.md  understanding_self-attention:_the_core_of_modern_deep_learning.md  understanding_the_middle_east_conflict:_a_comprehensive_overview.md
server/9-langgraph-crash/: 1-langgraph.ipynb  2-langgraph.ipynb  3-chatbot.ipynb  4-tool-call.ipynb  5-tool-call-agent.ipynb  6-memory.ipynb  7-langsmith-agent.ipynb
(+1 files in other folders)
